# Gaussian-Elimination

./: .gitignore  CMakeLists.txt  baseline.c  mpi.c  mpi_run.sh  omp.c  omp_run.sh  slurm-40641262.out  slurm-40641265.out  slurm-40641267.out  slurm-40641365.out  slurm-40641367.out  slurm-40641369.out
savedSlurm/mpi/: slurm-40641368.out
slumn_files/omp/: slurm-40641264.out
